fix h3 on footer on mobile size

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -60,6 +60,12 @@
                 margin-right: 2rem;
                 margin-bottom: 4rem;
                 
+                h3 {
+                    @media screen and (max-width: 500px) {
+                        font-size: 1rem;
+                    }
+                }
+
                 p {
                     font-size: 1rem;
 
